# java-decompiler

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  TODO.md  sample_output.java
.github/: LICENSE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  format.yml  sanitizers.yml  static-analyzers.yml  test.yml
class_format/: Cargo.toml  LICENSE.md  README.md
class_format/src/: access_flags.rs  attribute.rs  constant.rs  error.rs  lib.rs  member.rs  method.rs  op.rs  ty.rs
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
docs/: Supported_Features.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt  JarFile.cpp  JarFile.hpp  dependency.rs  error.rs  ext.rs  lib.rs  main.cpp  main.rs  settings.rs
src/class/: AttributeInfo.cpp  AttributeInfo.hpp  ClassFile.cpp  ClassFile.hpp  ConstantData.cpp  ConstantData.hpp  ConstantInfo.cpp  ConstantInfo.hpp  MemberInfo.cpp  MemberInfo.hpp  access_flags.hpp  access_flags.rs  attribute.rs  constant.rs  constant_tag.cpp  constant_tag.hpp  member.rs  method.rs  method_handle.cpp  method_handle.hpp  mod.rs  op.rs  tag_traits.hpp  type.rs
src/error/: class_format_error.hpp  file_error.hpp  jar_error.hpp
src/file/: jar.rs  manifest.rs  mod.rs
src/ir/: expression.rs  frame.rs  mod.rs
src/model/: mod.rs
src/util/: BinaryObjectBuffer.cpp  BinaryObjectBuffer.hpp  endian.hpp  objstream.hpp  string.cpp  string.hpp
test/: CMakeLists.txt
tests/: hello_world.rs  run_units.rs
tests/units/: 01_hello_world.java  01_return_lit.java  02_hello_world.java
