[package]
name = "java-decompiler"
version = "0.1.0"
authors = ["Tin Svagelj <tin.svagelj@live.com>"]
edition = "2021"

[[bin]]
name = "java_decompiler"
path = "src/bin/main.rs"
required-features = ["clap"]

[dependencies]
jvm-class-format = { path = "class_format" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
thiserror = "1.0"

paste = "1.0"

byteorder = "1.4"
bytemuck = "1.7"
num_enum = "0.6"
bitflags = "2.2"

zip = "0.6"

serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.0", optional = true }
