[package]
name = "jaded"
version = "0.1.0"
description = "Decompiler for Java programming language."
authors = ["Tin Svagelj <tin.svagelj@live.com>"]
edition = "2021"

[[bin]]
name = "jaded"
path = "src/bin/main.rs"
required-features = ["tracing-subscriber", "clap"]

[dependencies]
jvm-class-format = { path = "class_format" }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", optional = true }
thiserror = "1.0"

paste = "1.0"

byteorder = "1.4"
bytemuck = "1.7"
num_enum = "0.7"
bitflags = "2.2"

zip = "0.6"

serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
tracing-subscriber = { version = "0.3" }
