[package]
name = "jvm-class-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"

num_enum = "0.7"
bitflags = "2.2"

ordered-float = "4.1"

paste = "1.0"

log = { version = "0.4", features = ["release_max_level_info"] }

thiserror = "1.0"
